# totalmix-volume-control.rs

./: Cargo.toml  Config.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  tvc.rc
src/: app.rs  colors.rs  comms.rs  config.rs  floats.rs  gui.rs  hotkeys.rs  main.rs  manager.rs  math.rs  tray.rs  utils.rs
